[gd_scene load_steps=10 format=3 uid="uid://rjbkudvimj8w"]

[ext_resource type="Script" path="res://scripts/submarine_controller.gd" id="1_8wdlt"]
[ext_resource type="Material" uid="uid://c1hpi54ggsfek" path="res://resources/scenes/inventory_item.tres" id="2_28wo4"]
[ext_resource type="Texture2D" uid="uid://ntfvuov0y5uj" path="res://sprites/can_bg.png" id="2_ayump"]
[ext_resource type="Texture2D" uid="uid://c75skost88p2s" path="res://sprites/rope.png" id="3_gnlx7"]
[ext_resource type="Texture2D" uid="uid://3hj3wf20c6ew" path="res://sprites/can_fg.png" id="3_osspn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecrd5"]
size = Vector2(8, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwb74"]
size = Vector2(8, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8sq7f"]
size = Vector2(256, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fr1a1"]
size = Vector2(288, 168)

[node name="SubmarineController" type="Node2D"]
script = ExtResource("1_8wdlt")

[node name="RopeLine" type="Line2D" parent="."]
z_index = -1
texture_repeat = 2
material = ExtResource("2_28wo4")
points = PackedVector2Array(0, -1000, 0, 0)
texture = ExtResource("3_gnlx7")
texture_mode = 1

[node name="Can" type="RigidBody2D" parent="."]
physics_interpolation_mode = 1
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
linear_damp = 2.0

[node name="rwall" type="StaticBody2D" parent="Can"]
visible = false
position = Vector2(132, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/rwall"]
shape = SubResource("RectangleShape2D_ecrd5")

[node name="lwall" type="StaticBody2D" parent="Can"]
visible = false
position = Vector2(-132, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/lwall"]
shape = SubResource("RectangleShape2D_kwb74")

[node name="twall" type="StaticBody2D" parent="Can"]
visible = false
position = Vector2(0, 84)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/twall"]
shape = SubResource("RectangleShape2D_8sq7f")

[node name="bwall" type="StaticBody2D" parent="Can"]
visible = false
position = Vector2(0, -84)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/bwall"]
shape = SubResource("RectangleShape2D_8sq7f")

[node name="CanSprite2" type="Sprite2D" parent="Can"]
clip_children = 2
z_index = -1
texture = ExtResource("2_ayump")

[node name="CanSprite" type="Sprite2D" parent="Can"]
z_index = 1
texture = ExtResource("3_osspn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can"]
shape = SubResource("RectangleShape2D_fr1a1")
